--- a/nginx.yaml
+++ b/nginx.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: nginx
-    image: nginx:1.14.2
+    image: http:latest
     ports:
     - containerPort: 80
 
