--- a/nginx.yaml
+++ b/nginx.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: nginx
-    image: tomcat:latest
+    image: facebook
     ports:
     - containerPort: 80
 
