--- a/nginx.yaml
+++ b/nginx.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: nginx
-    image: prometheus
+    image: httpd:latest
     ports:
     - containerPort: 80
 
