--- a/nginx.yaml
+++ b/nginx.yaml
@@ -19,10 +19,10 @@ kind: Service
 metadata:
   name: my-nginix-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: devops
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30008
+      nodePort: 30009
